--- a/app/src/main/res/layout/activity_user_description.xml
+++ b/app/src/main/res/layout/activity_user_description.xml
@@ -3,6 +3,7 @@
 <com.commit451.elasticdragdismisslayout.ElasticDragDismissFrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/eddfl"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,8 +11,197 @@
     app:dragDismissScale="0.95"
     android:background="@color/grey1">
 
-    <FrameLayout
-        android:id="@+id/contentFl"
+    <LinearLayout
+        android:id="@+id/userDataLl"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end">
+
+            <me.zhanghai.android.materialprogressbar.MaterialProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_margin="8dp"
+                app:mpb_progressStyle="circular"
+                app:mpb_indeterminateTint="@color/activeIcon" />
+
+            <ImageButton
+                android:id="@+id/artistPortfolioLinkIb"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center"
+                style="@style/Widget.Splash.BorderlessImageButton"
+                android:src="@drawable/ic_open_in_new_black_24dp"
+                tools:ignore="ContentDescription"
+                android:visibility="gone"/>
+        </FrameLayout>
+
+
+        <ImageView
+            android:id="@+id/userPicIv"
+            android:layout_width="@dimen/large_avatar_size"
+            android:layout_height="@dimen/large_avatar_size"
+            android:layout_gravity="center_horizontal"
+            android:transitionName="@string/transition_artist_pic"
+            tools:ignore="ContentDescription"
+            android:src="@drawable/me"/>
+
+        <TextView
+            android:id="@+id/artistNameTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:paddingTop="8dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:paddingBottom="0dp"
+            android:textAppearance="@style/TextAppearance.ArtistName.Big"
+            android:layout_gravity="center_horizontal"
+            android:text="Amanshu Raikwar"/>
+
+        <TextView
+            android:id="@+id/artistUsernameTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="8dp"
+            android:textAppearance="@style/TextAppearance.ArtistUsername.Big"
+            android:layout_gravity="center_horizontal"
+            android:text="\@amanshuraikwar" />
+
+        <HorizontalScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:clipToPadding="false"
+            android:scrollbars="none"
+            android:layout_gravity="center_horizontal">
+
+            <LinearLayout
+                android:id="@+id/tagsParentLl"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+            </LinearLayout>
+        </HorizontalScrollView>
+
+        <TextView
+            android:id="@+id/artistBioTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="7"
+            android:paddingBottom="0dp"
+            android:paddingEnd="16dp"
+            android:paddingStart="16dp"
+            android:paddingTop="8dp"
+            android:layout_gravity="center_horizontal"
+            android:text="photographer from india"
+            android:textAppearance="@style/TextAppearance.ArtistBio"
+            android:visibility="gone" />
+
+        <FrameLayout
+            android:id="@+id/artistLocationFl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:visibility="visible"
+            android:background="@color/grey2">
+
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_gravity="center_horizontal">
+
+                <ImageView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginBottom="12dp"
+                    android:src="@drawable/ic_place_black_24dp"
+                    style="@style/Widget.Splash.ImageView"
+                    tools:ignore="ContentDescription"
+                    android:tint="@color/green"/>
+
+                <TextView
+                    android:id="@+id/artistLocationTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="24dp"
+                    android:textAppearance="@style/TextAppearance.LocationTitle"
+                    android:lines="1"
+                    android:text="Unknown location"/>
+            </FrameLayout>
+        </FrameLayout>
+
+        <LinearLayout
+            android:id="@+id/photoActionsLl"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:paddingStart="16dp"
+            android:paddingTop="24dp"
+            android:paddingEnd="16dp"
+            android:paddingBottom="16dp"
+            android:clipToPadding="false">
+
+            <Button
+                android:id="@+id/artistPhotosCountBtn"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:drawableTop="@drawable/ic_image_black_24dp"
+                android:drawableTint="@color/teal"
+                style="@style/Widget.Splash.InlineActionButton"
+                android:background="@null"
+                android:text="--"/>
+
+            <Button
+                android:id="@+id/artistFollowersCountBtn"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:drawableTop="@drawable/ic_group_black_24dp"
+                android:drawableTint="@color/indigo"
+                style="@style/Widget.Splash.InlineActionButton"
+                android:background="@null"
+                android:text="--"/>
+
+            <Button
+                android:id="@+id/artistLikesCountBtn"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:drawableTop="@drawable/ic_heart_solid_black_24dp"
+                android:drawableTint="@color/pink"
+                style="@style/Widget.Splash.InlineActionButton"
+                android:background="@null"
+                android:text="--" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <View
+        android:id="@+id/overlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/grey1"
+        android:visibility="gone"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/itemsRv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingBottom="16dp"
+        android:paddingEnd="2dp"
+        android:paddingStart="2dp"
+        android:paddingTop="2dp" />
 </com.commit451.elasticdragdismisslayout.ElasticDragDismissFrameLayout>
